Added Test Material

--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,10 +101,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=4
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/Levels/L_MasterLevel1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -862,15 +862,16 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Te
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SM_MERGED_SM_WoodPlankBroken2_RDB2_31
-MRUItem1=/Game/Assets/StaticMesh/SM_Ivyleaf
-MRUItem2=/Game/Assets/MaterialInstances/MI_Ground_RDB
-MRUItem3=/Game/Assets/Materials/M_Ground_RDB
-MRUItem4=/Game/Assets/Materials/M_Decal
-MRUItem5=/Game/Levels/L_HD_RDB
+MRUItem0=/Game/Levels/L_MasterLevel1
+MRUItem1=/Game/SM_MERGED_SM_WoodPlankBroken2_RDB2_31
+MRUItem2=/Game/Assets/StaticMesh/SM_Ivyleaf
+MRUItem3=/Game/Assets/MaterialInstances/MI_Ground_RDB
+MRUItem4=/Game/Assets/Materials/M_Ground_RDB
+MRUItem5=/Game/Assets/Materials/M_Decal
+MRUItem6=/Game/Levels/L_HD_RDB
 
 [DetailCategories]
 Actor.TransformCommon=True
