--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ CurrentPosGridSize=4
 LastLevel=/Game/Levels/L_HD_HWL
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -137,7 +137,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -819,6 +819,8 @@ MovieSceneCapture.TimeStamp=2019.08.23-21.41.53
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2019.08.23-21.41.55
 StaticMeshEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2019.08.23-21.41.49
+BlueprintGraph.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -839,7 +841,9 @@ bSCCUseGlobalSettings=False
 MRUItem0=/Game/Levels/L_HD_HWL
 MRUItem1=/Game/Levels/L_HD_YH
 MRUItem2=/Game/Levels/L_MasterLevel1
-MRUItem3=/Game/Levels/L_HD_RDB
+MRUItem3=/Game/Levels/L_LD_YH
+MRUItem4=/Game/Levels/L_LD_HWL
+MRUItem5=/Game/Levels/L_HD_RDB
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -860,22 +864,31 @@ PaletteThumbnailScale=0.300000
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Base,MaterialEditorInstanceConstant.ParameterGroups.normal,MaterialEditorInstanceConstant.ParameterGroups.Parameters,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Base,MaterialEditorInstanceConstant.ParameterGroups.normal,MaterialEditorInstanceConstant.ParameterGroups.Parameters,MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,
+PostProcessVolume=PostProcessVolume.Lens.Lens|Depth of Field,
+StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,
+StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=LightingResults
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/L_HD_HWL
-MRUItem1=/Game/Levels/L_HD_YH
-MRUItem2=/Game/Levels/L_MasterLevel1
-MRUItem3=/Game/SM_MERGED_SM_WoodPlankBroken2_RDB2_31
-MRUItem4=/Game/Assets/StaticMesh/SM_Ivyleaf
-MRUItem5=/Game/Assets/MaterialInstances/MI_Ground_RDB
-MRUItem6=/Game/Assets/Materials/M_Ground_RDB
-MRUItem7=/Game/Assets/Materials/M_Decal
-MRUItem8=/Game/Levels/L_HD_RDB
+MRUItem1=/Game/Assets/MaterialInstances/MI_Emission_YH
+MRUItem2=/Game/Assets/Materials/M_Emission_YH
+MRUItem3=/Game/Assets/Materials/M_3maps_YH
+MRUItem4=/Game/Assets/MaterialInstances/MI_Lamp_YH
+MRUItem5=/Game/Levels/L_HD_YH
+MRUItem6=/Game/Levels/L_MasterLevel1
+MRUItem7=/Game/Levels/L_LD_YH
+MRUItem8=/Game/Levels/L_LD_HWL
+MRUItem9=/Game/SM_MERGED_SM_WoodPlankBroken2_RDB2_31
+MRUItem10=/Game/Assets/StaticMesh/SM_Ivyleaf
+MRUItem11=/Game/Assets/MaterialInstances/MI_Ground_RDB
+MRUItem12=/Game/Assets/Materials/M_Ground_RDB
+MRUItem13=/Game/Assets/Materials/M_Decal
+MRUItem14=/Game/Levels/L_HD_RDB
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -1017,6 +1030,90 @@ InstancedFoliageActor.TransformCommon=True
 InstancedFoliageActor.Replication=True
 InstancedFoliageActor.Input=True
 InstancedFoliageActor.Actor=True
+Actor.Actor=True
+L_HD_HWL_C.Tick=True
+L_HD_HWL_C.Replication=True
+L_HD_HWL_C.Input=True
+L_HD_HWL_C.Actor=True
+BP_Character_C.TransformCommon=True
+BP_Character_C.Animation=True
+BP_Character_C.Mesh=True
+BP_Character_C.Clothing=True
+BP_Character_C.Physics=True
+BP_Character_C.MasterPoseComponent=True
+BP_Character_C.Collision=True
+BP_Character_C.Lighting=True
+BP_Character_C.ClothingSimulation=True
+BP_Character_C.Rendering=True
+BP_Character_C.Tags=True
+BP_Character_C.Activation=True
+BP_Character_C.Cooking=True
+BP_Character_C.Character Movement (General Settings)=True
+BP_Character_C.Character Movement: Walking=True
+BP_Character_C.Character Movement: Jumping / Falling=True
+BP_Character_C.Character Movement (Networking)=True
+BP_Character_C.Character Movement: Swimming=True
+BP_Character_C.Character Movement: Flying=True
+BP_Character_C.Character Movement: Custom Movement=True
+BP_Character_C.Character Movement (Rotation Settings)=True
+BP_Character_C.Character Movement: Physics Interaction=True
+BP_Character_C.Character Movement=True
+BP_Character_C.Character Movement: Avoidance=True
+BP_Character_C.RootMotion=True
+BP_Character_C.Character Movement: NavMesh Movement=True
+BP_Character_C.NavMovement=True
+BP_Character_C.Velocity=True
+BP_Character_C.PlanarMovement=True
+BP_Character_C.MovementComponent=True
+BP_Character_C.Shape=True
+BP_Character_C.Navigation=True
+BP_Character_C.Character=True
+BP_Character_C.Camera=True
+BP_Character_C.Pawn=True
+BP_Character_C.Replication=True
+BP_Character_C.Input=True
+BP_Character_C.Actor=True
+BP_PipeBuilder_C.TransformCommon=True
+BP_PipeBuilder_C.Default=True
+BP_PipeBuilder_C.Rendering=True
+BP_PipeBuilder_C.Replication=True
+BP_PipeBuilder_C.Input=True
+BP_PipeBuilder_C.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.RayTracing=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+Lantern_BP_C.TransformCommon=True
+Lantern_BP_C.Light settings=True
+Lantern_BP_C.Rendering=True
+Lantern_BP_C.Replication=True
+Lantern_BP_C.Input=True
+Lantern_BP_C.Actor=True
+StaticMeshActor.MaterialParameters=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Mobile=True
+StaticMesh.Thumbnail=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1027,8 +1124,12 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/StaticMesh/SM_Powerlines_3_YH.SM_Powerlines_3_YH;
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 
@@ -1038,6 +1139,15 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 /Game/Assets/MaterialInstances/MI_Ground_RDB.MI_Ground_RDB=1
 /Game/Assets/StaticMesh/SM_Ivyleaf.SM_Ivyleaf=1
 /Game/SM_MERGED_SM_WoodPlankBroken2_RDB2_31.SM_MERGED_SM_WoodPlankBroken2_RDB2_31=1
+/Game/Levels/L_HD_HWL.L_HD_HWL:PersistentLevel.L_HD_HWL=1
+/Game/Assets/MaterialInstances/MI_Lamp_YH.MI_Lamp_YH=1
+/Game/Assets/Materials/M_3maps_YH.M_3maps_YH=1
+/Game/Assets/MaterialInstances/MI_Emission_YH.MI_Emission_YH=1
+/Game/Assets/Materials/M_Emission_YH.M_Emission_YH=1
+/Game/Assets/StaticMesh/Rocks/SM__smallrock.SM__smallrock=1
+/Game/Assets/StaticMesh/Rocks/SM_rocks__Rocks_01.SM_rocks__Rocks_01=1
+/Game/Assets/StaticMesh/Rocks/SM_rocks__Rocks_02.SM_rocks__Rocks_02=1
+/Game/Assets/StaticMesh/Rocks/SM_rocks__Rocks_03.SM_rocks__Rocks_03=1
 
 [MaterialEditor]
 PrimType=1
@@ -1086,6 +1196,7 @@ PrimType=1
 
 [DetailCategoriesAdvanced]
 FoliageType_InstancedStaticMesh.InstanceSettings=True
+StaticMeshActor.StaticMesh=True
 
 [StatsViewer]
 DisplayedStatsPageName=PrimitiveStats
