--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,7 +104,7 @@ CurrentPosGridSize=4
 LastLevel=/Game/Levels/L_MD_JAB
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -827,6 +827,16 @@ ApexDestructionEditor.TimeStamp=2019.08.23-21.49.50
 ApexDestructionEditor.LastCompileMethod=Unknown
 SunPosition.TimeStamp=2019.08.23-21.50.32
 SunPosition.LastCompileMethod=Unknown
+SubstanceCore.TimeStamp=2020.01.16-20.31.52
+SubstanceCore.LastCompileMethod=Unknown
+SubstanceEditor.TimeStamp=2020.01.16-20.31.52
+SubstanceEditor.LastCompileMethod=Unknown
+SubstanceSource.TimeStamp=2020.01.16-20.31.53
+SubstanceSource.LastCompileMethod=Unknown
+SubstanceLiveLink.TimeStamp=2020.01.16-20.31.52
+SubstanceLiveLink.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2019.08.23-21.41.55
+TextureEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
