--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -835,7 +835,7 @@ MovieSceneCapture.TimeStamp=2019.08.23-21.41.53
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2019.08.23-21.41.49
 BlueprintGraph.LastCompileMethod=External
-WorldBrowser.TimeStamp=2019.08.23-21.41.56
+WorldBrowser.TimeStamp=2020.01.17-02.40.58
 WorldBrowser.LastCompileMethod=External
 MeshBuilder.TimeStamp=2020.01.17-02.40.52
 MeshBuilder.LastCompileMethod=External
@@ -1755,11 +1755,13 @@ PrecomputedVisibilityVolume.TransformCommon=True
 PrecomputedVisibilityVolume.Replication=True
 PrecomputedVisibilityVolume.BrushSettings=True
 PrecomputedVisibilityVolume.Actor=True
+DirectionalLight.LOD=True
+DirectionalLight.AssetUserData=True
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Compiler.DefaultCompilerOptions\" \"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Mesh.VertexOverrideColor\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 AudioSettings="\"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
 ConsoleSettings="\"Object.AutoComplete.ManualAutoCompleteList\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[0]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[1]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[2]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[3]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[4]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[5]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[6]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[7]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[8]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[9]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[10]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[11]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[12]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[13]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[14]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[15]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[16]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[17]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[18]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[19]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[20]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[21]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[22]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[23]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[24]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[25]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[26]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[27]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[28]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[29]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[30]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[31]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[32]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[33]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[34]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[35]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[36]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[37]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[38]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[39]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[40]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[41]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[42]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[43]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[44]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[45]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[46]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[47]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[48]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[49]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[50]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[51]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[52]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[53]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[54]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[55]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[56]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[57]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[58]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[59]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[60]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[61]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[62]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[63]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[64]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[65]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[66]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[67]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[68]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[69]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[70]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[71]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[72]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[73]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[74]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[75]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[76]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[77]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[78]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[79]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[80]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[81]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[82]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[83]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[84]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[85]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[86]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[87]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[88]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[89]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[90]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[91]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[92]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[93]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[94]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[95]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[96]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[97]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[98]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[99]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[100]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[101]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[102]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[103]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[104]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[105]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[106]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[107]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[108]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[109]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[110]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[111]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[112]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[113]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[114]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[115]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[116]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[117]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[118]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[119]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[120]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[121]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[122]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[123]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[124]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[125]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[126]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[127]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[128]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[129]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[130]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[131]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[132]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[133]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[134]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[135]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[136]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[137]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[138]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[139]\" \"Object.AutoComplete.AutoCompleteMapPaths\" "
 CookerSettings="\"Object.Cooker.ClassesExcludedOnDedicatedServer\" \"Object.Cooker.ClassesExcludedOnDedicatedClient\" \"Object.Cooker.VersionedIntRValues\" "
@@ -1818,26 +1820,26 @@ MRUItem6=/Game/Levels/Archive/L_HD_RDB
 MRUItem7=/Game/Levels/WL_Lighting
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/L_LD_JAB
-MRUItem1=/Game/Assets/StaticMesh/Wood/SM_TallWoodPole_HWL
-MRUItem2=/Game/Assets/StaticMesh/TrainTtracks/SM_TrainPlank_Trim_HWL
-MRUItem3=/Game/Assets/StaticMesh/TrainTtracks/SM_TrainPlank_HWL
-MRUItem4=/Game/Assets/StaticMesh/Wood/SM_LongPlank_HWL
-MRUItem5=/Game/Assets/StaticMesh/Wood/SM_ShortPlank_HWL
-MRUItem6=/Game/Assets/StaticMesh/Wood/SM_MediumPlank_HWL
-MRUItem7=/Game/Assets/StaticMesh/Metal/SM_MineCart_HWL
-MRUItem8=/Game/Assets/StaticMesh/Trees/SM_Tree_HWL
-MRUItem9=/Game/Assets/StaticMesh/Trees/SM_TreeTrunk1_HWL
-MRUItem10=/Game/Assets/StaticMesh/Trees/SM_TreeTrunk2_HWL
-MRUItem11=/Game/Assets/StaticMesh/Metal/SM_Wires_YH
-MRUItem12=/Game/Assets/StaticMesh/Sandbag/SM_Sandbag_02_HWL
-MRUItem13=/Game/Assets/StaticMesh/Sandbag/SM_Sandbag_01_HWL
-MRUItem14=/Game/Assets/StaticMesh/Rocks/SM_SmallRock_HWL
-MRUItem15=/Game/Assets/StaticMesh/SM_Wire_HWL
-MRUItem16=/Game/Assets/StaticMesh/SM_BarbWire_HWL
-MRUItem17=/Game/Assets/StaticMesh/Metal/SM_Wires_02_YH
-MRUItem18=/Game/Assets/StaticMesh/SM_CrossWood_HWL
-MRUItem19=/Game/Assets/StaticMesh/SM_Helmet_HWL
+MRUItem0=/Game/Assets/StaticMesh/Metal/SM_WindMill_Tail_JAB
+MRUItem1=/Game/Assets/StaticMesh/Metal/SM_TrainTrack_JAB
+MRUItem2=/Game/Assets/StaticMesh/Metal/SM_WindMill_Rotor_JAB
+MRUItem3=/Game/Levels/L_LD_JAB
+MRUItem4=/Game/Assets/StaticMesh/Wood/SM_TallWoodPole_HWL
+MRUItem5=/Game/Assets/StaticMesh/TrainTtracks/SM_TrainPlank_Trim_HWL
+MRUItem6=/Game/Assets/StaticMesh/TrainTtracks/SM_TrainPlank_HWL
+MRUItem7=/Game/Assets/StaticMesh/Wood/SM_LongPlank_HWL
+MRUItem8=/Game/Assets/StaticMesh/Wood/SM_ShortPlank_HWL
+MRUItem9=/Game/Assets/StaticMesh/Wood/SM_MediumPlank_HWL
+MRUItem10=/Game/Assets/StaticMesh/Metal/SM_MineCart_HWL
+MRUItem11=/Game/Assets/StaticMesh/Trees/SM_Tree_HWL
+MRUItem12=/Game/Assets/StaticMesh/Trees/SM_TreeTrunk1_HWL
+MRUItem13=/Game/Assets/StaticMesh/Trees/SM_TreeTrunk2_HWL
+MRUItem14=/Game/Assets/StaticMesh/Metal/SM_Wires_YH
+MRUItem15=/Game/Assets/StaticMesh/Sandbag/SM_Sandbag_02_HWL
+MRUItem16=/Game/Assets/StaticMesh/Sandbag/SM_Sandbag_01_HWL
+MRUItem17=/Game/Assets/StaticMesh/Rocks/SM_SmallRock_HWL
+MRUItem18=/Game/Assets/StaticMesh/SM_Wire_HWL
+MRUItem19=/Game/Assets/StaticMesh/SM_BarbWire_HWL
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1951,6 +1953,9 @@ InstalledPlugins=ToolbagImporter
 /Game/Assets/StaticMesh/TrainTtracks/SM_TrainPlank_HWL.SM_TrainPlank_HWL=1
 /Game/Assets/StaticMesh/TrainTtracks/SM_TrainPlank_Trim_HWL.SM_TrainPlank_Trim_HWL=1
 /Game/Assets/StaticMesh/Wood/SM_TallWoodPole_HWL.SM_TallWoodPole_HWL=1
+/Game/Assets/StaticMesh/Metal/SM_WindMill_Rotor_JAB.SM_WindMill_Rotor_JAB=1
+/Game/Assets/StaticMesh/Metal/SM_TrainTrack_JAB.SM_TrainTrack_JAB=1
+/Game/Assets/StaticMesh/Metal/SM_WindMill_Tail_JAB.SM_WindMill_Tail_JAB=1
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1991,10 +1996,11 @@ StaticMesh.StaticMesh=True
 FoliageType_InstancedStaticMesh.InstanceSettings=True
 StaticMeshActor.Lighting=True
 DirectionalLight.CascadedShadowMaps=True
-DirectionalLight.DistanceFieldShadows=False
+DirectionalLight.DistanceFieldShadows=True
 StaticMeshActor.StaticMesh=True
 WorldSettings.Lightmass=True
 StaticMeshActor.Materials=True
+DirectionalLight.Light=True
 
 [MaterialEditor]
 PrimType=1
