--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [EditorStartup]
-LastLevel=/Game/Levels/L_LD_JAB
+LastLevel=/Game/Levels/Archive/L_HD_YH
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -136,7 +136,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh/ModularFort
+ContentBrowserTab1.SelectedPaths=/Game/Assets/ART_Blueprints/Asset_BP
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -144,9 +144,11 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
+UNR=D:/GitHub/RustyRiotRepo/RustyRiot/Content/Levels/Archive
 BRUSH=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBX=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBXAnim=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
@@ -860,9 +862,11 @@ SubstanceSource.TimeStamp=2019.09.08-03.15.00
 SubstanceSource.LastCompileMethod=Unknown
 SubstanceLiveLink.TimeStamp=2019.09.08-03.14.59
 SubstanceLiveLink.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2019.05.23-02.28.32
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -884,13 +888,83 @@ InstalledPlugins=Substance
 InstalledPlugins=ToolbagImporter
 
 [MRU]
-MRUItem0=/Game/Levels/Archive/L_MasterLevel1
-MRUItem1=/Game/Levels/L_HD_JAB
-MRUItem2=/Game/Levels/L_HD_HWL
+MRUItem0=/Game/Levels/Archive/L_HD_YH
+MRUItem1=/Game/Levels/Archive/L_MasterLevel1
+MRUItem2=/Game/Levels/L_HD_JAB
+MRUItem3=/Game/Levels/L_HD_HWL
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Archive/L_MasterLevel1
-MRUItem1=/Game/Levels/L_HD_JAB
-MRUItem2=/Game/Levels/L_HD_HWL
+MRUItem0=/Game/Assets/ART_Blueprints/Asset_BP/BP_InstanceOnSpline
+MRUItem1=/Game/Assets/ART_Blueprints/Asset_BP/BP_PipeBuilder
+MRUItem2=/Game/Assets/ART_Blueprints/Asset_BP/BP_RoadBuilder
+MRUItem3=/Game/Levels/Archive/L_HD_YH
+MRUItem4=/Game/Levels/Archive/L_MasterLevel1
+MRUItem5=/Game/Levels/L_HD_JAB
+MRUItem6=/Game/Levels/L_HD_HWL
+
+[DetailCategories]
+BP_PipeBuilder_C.Tick=True
+BP_PipeBuilder_C.Default=True
+BP_PipeBuilder_C.Rendering=True
+BP_PipeBuilder_C.Replication=True
+BP_PipeBuilder_C.Input=True
+BP_PipeBuilder_C.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Cooking=True
+SplineComponent.Variable=True
+SplineComponent.TransformCommon=True
+SplineComponent.Sockets=True
+SplineComponent.Spline=True
+SplineComponent.Editor=True
+SplineComponent.Selected Points=True
+SplineComponent.Tags=True
+SplineComponent.ComponentReplication=True
+SplineComponent.Activation=True
+SplineComponent.Cooking=True
+SplineComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+SplineMeshComponent.TransformCommon=True
+SplineMeshComponent.StaticMesh=True
+SplineMeshComponent.SplineMesh=True
+SplineMeshComponent.Spline=True
+SplineMeshComponent.Collision=True
+SplineMeshComponent.Lighting=True
+SplineMeshComponent.Rendering=True
+SplineMeshComponent.Tags=True
+SplineMeshComponent.ComponentReplication=True
+SplineMeshComponent.Variable=True
+SplineMeshComponent.Cooking=True
+BP_RoadBuilder_C.Tick=True
+BP_RoadBuilder_C.Default=True
+BP_RoadBuilder_C.Track Setup=True
+BP_RoadBuilder_C.Default Track Elements=True
+BP_RoadBuilder_C.Rendering=True
+BP_RoadBuilder_C.Replication=True
+BP_RoadBuilder_C.Input=True
+BP_RoadBuilder_C.Actor=True
+BP_InstanceOnSpline_C.Tick=True
+BP_InstanceOnSpline_C.Default=True
+BP_InstanceOnSpline_C.Rendering=True
+BP_InstanceOnSpline_C.Replication=True
+BP_InstanceOnSpline_C.Input=True
+BP_InstanceOnSpline_C.Actor=True
+
+[AssetEditorToolkitTabLocation]
+/Game/Assets/ART_Blueprints/Asset_BP/BP_PipeBuilder.BP_PipeBuilder=0
+/Game/Assets/ART_Blueprints/Asset_BP/BP_RoadBuilder.BP_RoadBuilder=1
+/Game/Assets/ART_Blueprints/Asset_BP/BP_InstanceOnSpline.BP_InstanceOnSpline=1
 
 
