--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh/Ground
+ContentBrowserTab1.SelectedPaths=/Game/Assets/ART_Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -144,6 +144,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=../../../../../../Users/AlienBlood/Desktop/TEST/Content/Levels/Archive
@@ -860,6 +862,8 @@ SubstanceSource.TimeStamp=2019.09.08-03.15.00
 SubstanceSource.LastCompileMethod=Unknown
 SubstanceLiveLink.TimeStamp=2019.09.08-03.14.59
 SubstanceLiveLink.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2019.05.23-02.28.32
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -889,8 +893,31 @@ MRUItem1=/Game/Levels/L_HD_JAB
 MRUItem2=/Game/Levels/L_HD_HWL
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Archive/L_MasterLevel1
-MRUItem1=/Game/Levels/L_HD_JAB
-MRUItem2=/Game/Levels/L_HD_HWL
+MRUItem0=/Game/Assets/ART_Blueprints/Asset_BP/BP_PipeBuilder
+MRUItem1=/Game/Levels/Archive/L_MasterLevel1
+MRUItem2=/Game/Levels/L_HD_JAB
+MRUItem3=/Game/Levels/L_HD_HWL
+
+[DetailCategories]
+BP_PipeBuilder_C.Tick=True
+BP_PipeBuilder_C.Default=True
+BP_PipeBuilder_C.Rendering=True
+BP_PipeBuilder_C.Replication=True
+BP_PipeBuilder_C.Input=True
+BP_PipeBuilder_C.Actor=True
+SplineComponent.Variable=True
+SplineComponent.TransformCommon=True
+SplineComponent.Sockets=True
+SplineComponent.Spline=True
+SplineComponent.Editor=True
+SplineComponent.Selected Points=True
+SplineComponent.Tags=True
+SplineComponent.ComponentReplication=True
+SplineComponent.Activation=True
+SplineComponent.Cooking=True
+SplineComponent.Events=True
+
+[AssetEditorToolkitTabLocation]
+/Game/Assets/ART_Blueprints/Asset_BP/BP_PipeBuilder.BP_PipeBuilder=0
 
 
