Merged_And_Organized
Added VFX 5: Rocket

--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,14 +109,14 @@ CurrentRotGridSize=6
 RotGridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Levels/L_HD_RDB
+LastLevel=/Game/Levels/L_Effects
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=969.962 Y=94.189
-WindowSize=X=1279.698 Y=720.000
+ScreenPosition=X=197.000 Y=605.000
+WindowSize=X=1279.000 Y=720.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -189,7 +189,7 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/RustyRiotRepo/RustyRiot/Content/Levels
+UNR=D:/GitHub/RustyRiotRepo/RustyRiot/Content/Levels
 BRUSH=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBX=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
 FBXAnim=../../../../../../Users/AlienBlood/Desktop/TEST/Content/
@@ -929,15 +929,15 @@ NiagaraEditor.TimeStamp=2020.02.25-17.14.48
 NiagaraEditor.LastCompileMethod=External
 NiagaraEditorWidgets.TimeStamp=2020.02.25-17.14.48
 NiagaraEditorWidgets.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2019.08.23-21.41.55
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2020.02.25-17.12.29
+SequencerWidgets.LastCompileMethod=External
 SkeletonEditor.TimeStamp=2020.02.25-17.12.30
 SkeletonEditor.LastCompileMethod=External
 PinnedCommandList.TimeStamp=2020.02.25-17.12.26
 PinnedCommandList.LastCompileMethod=External
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -959,13 +959,13 @@ InstalledPlugins=Substance
 InstalledPlugins=ToolbagImporter
 
 [MRU]
-MRUItem0=/Game/Levels/L_HD_RDB
-MRUItem1=/Game/Levels/L_LD_RDB
-MRUItem2=/Game/Levels/L_HD_JAB
-MRUItem3=/Game/Levels/L_LD_JAB
-MRUItem4=/Game/Levels/L_BuildingMaterials
-MRUItem5=/Game/Levels/L_HD_YH
-MRUItem6=/Game/Levels/L_Effects
+MRUItem0=/Game/Levels/L_Effects
+MRUItem1=/Game/Levels/L_HD_RDB
+MRUItem2=/Game/Levels/L_LD_RDB
+MRUItem3=/Game/Levels/L_HD_JAB
+MRUItem4=/Game/Levels/L_LD_JAB
+MRUItem5=/Game/Levels/L_BuildingMaterials
+MRUItem6=/Game/Levels/L_HD_YH
 MRUItem7=/Game/Levels/L_Lobby
 MRUItem8=/Game/Levels/L_HD_OD
 MRUItem9=/Game/Levels/L_HD_HWL
@@ -973,26 +973,26 @@ MRUItem10=/Game/Levels/L_HD_LF
 MRUItem11=/Game/Levels/Archive/L_BuildingMaterials
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/L_HD_RDB
-MRUItem1=/Game/Levels/L_LD_RDB
-MRUItem2=/Game/Levels/L_HD_JAB
-MRUItem3=/Game/Assets/Materials/M_CarMasterMetal
-MRUItem4=/Game/Assets/Textures/Cars/car_03/T_Car_03_BlackParts_AORM
-MRUItem5=/Game/Assets/MaterialInstances/car_03/MI_Car_03_BlackParts_Inst
-MRUItem6=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT
-MRUItem7=/Game/Assets/MaterialInstances/car_03/MI_Car_03_Gold_Inst
-MRUItem8=/Game/Assets/MaterialInstances/car_03/MI_Car_03_Silver_Inst
-MRUItem9=/Game/Assets/MaterialInstances/car_03/MI_Car_Lights_Inst
-MRUItem10=/Game/Assets/MaterialInstances/car_03/MI_Car_Lights
-MRUItem11=/Game/Assets/MaterialInstances/car_03/Car3_unwrapped_05
-MRUItem12=/Game/Assets/MaterialInstances/car_01/Car_01
-MRUItem13=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT_Skeleton
-MRUItem14=/Game/Levels/L_BuildingMaterials
-MRUItem15=/Game/Levels/L_HD_YH
-MRUItem16=/Game/Levels/L_Effects
-MRUItem17=/Game/Levels/L_Lobby
-MRUItem18=/Game/Assets/ART_Blueprints/Olga/BP_WoodPanels
-MRUItem19=/Game/Assets/Textures/Wood/T_wood1Tileable_BC
+MRUItem0=/Game/Levels/L_Effects
+MRUItem1=/Game/Assets/Materials/Effects/M_Fire
+MRUItem2=/Game/Assets/MaterialInstances/Effects/MI_Fire
+MRUItem3=/Game/Assets/FX/Emitters/EM_Flame_Thrower
+MRUItem4=/Game/Levels/L_HD_RDB
+MRUItem5=/Game/Levels/L_LD_RDB
+MRUItem6=/Game/Levels/L_HD_JAB
+MRUItem7=/Game/Assets/Materials/M_CarMasterMetal
+MRUItem8=/Game/Assets/Textures/Cars/car_03/T_Car_03_BlackParts_AORM
+MRUItem9=/Game/Assets/MaterialInstances/car_03/MI_Car_03_BlackParts_Inst
+MRUItem10=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT
+MRUItem11=/Game/Assets/MaterialInstances/car_03/MI_Car_03_Gold_Inst
+MRUItem12=/Game/Assets/MaterialInstances/car_03/MI_Car_03_Silver_Inst
+MRUItem13=/Game/Assets/MaterialInstances/car_03/MI_Car_Lights_Inst
+MRUItem14=/Game/Assets/MaterialInstances/car_03/MI_Car_Lights
+MRUItem15=/Game/Assets/MaterialInstances/car_03/Car3_unwrapped_05
+MRUItem16=/Game/Assets/MaterialInstances/car_01/Car_01
+MRUItem17=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT_Skeleton
+MRUItem18=/Game/Levels/L_BuildingMaterials
+MRUItem19=/Game/Levels/L_HD_YH
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -1935,6 +1935,9 @@ PrecomputedVisibilityVolume.Actor=True
 /Game/Assets/MaterialInstances/car_03/MI_Car_03_BlackParts_Inst.MI_Car_03_BlackParts_Inst=1
 /Game/Assets/Textures/Cars/car_03/T_Car_03_BlackParts_AORM.T_Car_03_BlackParts_AORM=1
 /Game/Assets/Materials/M_CarMasterMetal.M_CarMasterMetal=1
+/Game/Assets/FX/Emitters/EM_Flame_Thrower.EM_Flame_Thrower=1
+/Game/Assets/MaterialInstances/Effects/MI_Fire.MI_Fire=1
+/Game/Assets/Materials/Effects/M_Fire.M_Fire=1
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2003,14 +2006,14 @@ MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Base,Mat
 StaticMesh=StaticMesh.Collision.Collision,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AssetViewerSettings=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,
-PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessVolume.Rendering Features.Rendering Features|Reflections,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,PostProcessVolume.Rendering Features.Rendering Features|Misc,
+PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Lens.Lens
 CineCameraActor=CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Lens
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,
 PreviewMeshCollection=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" "
-Object=
+Object="\"Object.ImportSettings.AssetImportData\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.Preview.PreviewMeshes\" "
@@ -2047,7 +2050,7 @@ BP_RoadBuilder_C=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 PreviewMaterial="\"Object.ImportSettings.AssetImportData\" "
 Material="\"Object.ImportSettings.AssetImportData\" "
-MaterialInterface=
+MaterialInterface="\"Object.ImportSettings.AssetImportData\" "
 MaterialEditorInstanceConstant=
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BP_InstanceOnSpline_RDB_C="\"Object.Default.InstanceData\" "
@@ -2061,6 +2064,8 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PrecomputedVisibilityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Assets/FX/Effect_02.Effect_02;
+RecentlyPlaced=/Game/Assets/FX/Effect_05.Effect_05;
 RecentlyPlaced=/Script/Engine.PrecomputedVisibilityVolume;/Engine/Transient.ActorFactoryBoxVolume_19
 RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT.SKM_Car_ModelT;
 RecentlyPlaced=/Game/Assets/MaterialInstances/car_03/Car3_unwrapped_05.Car3_unwrapped_05;
@@ -2069,7 +2074,6 @@ RecentlyPlaced=/Game/Assets/MaterialInstances/car_02/Car_02_Glass_FIX.Car_02_Gla
 RecentlyPlaced=/Game/Assets/FX/Effect_03.Effect_03;
 RecentlyPlaced=/Game/Assets/StaticMesh/Wood/SM_Bridge.SM_Bridge;
 RecentlyPlaced=/Game/Assets/FX/Effect_04.Effect_04;
-RecentlyPlaced=/Game/Assets/FX/Effect_02.Effect_02;
 RecentlyPlaced=/Game/Assets/StaticMesh/SM_Car_Test.SM_Car_TEST;
 RecentlyPlaced=/Game/Assets/FX/Effect_01.Effect_01;
 RecentlyPlaced=/Game/Assets/Materials/M_Basic.M_Basic;
@@ -2080,7 +2084,6 @@ RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_TankWreck_RDB.SM_TankWreck_RDB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_Leaf_JAB.SM_Leaf_JAB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_IvyLeaf_RDB.SM_IvyLeaf_RDB;
 RecentlyPlaced=/Game/Assets/Particles/PS_FallingLeaves_JAB.PS_FallingLeaves_JAB;
-RecentlyPlaced=/Game/Assets/ART_Blueprints/Lift/BP_LiftAutomatic_JAB.BP_LiftAutomatic_JAB;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
