Added more VFXs and fixed stuff

--- a/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/RustyRiot/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -150,13 +150,13 @@ ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=1.379882
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.420117
-ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
-ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
-ContentBrowserTab1.ActiveTypeFilters=Material,ObjectRedirector,StaticMesh,Texture2D,World,NiagaraScript,NiagaraScript,NiagaraScript
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.127978
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.872022
+ContentBrowserTab1.ActiveTypeFilters=Material,ObjectRedirector,StaticMesh,Texture2D,World,NiagaraScript,NiagaraScript,NiagaraScript,DestructibleMesh
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -973,26 +973,26 @@ MRUItem10=/Game/Levels/L_HD_LF
 MRUItem11=/Game/Levels/Archive/L_BuildingMaterials
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/L_Effects
-MRUItem1=/Game/Assets/Materials/Effects/M_Fire
-MRUItem2=/Game/Assets/MaterialInstances/Effects/MI_Fire
-MRUItem3=/Game/Assets/FX/Emitters/EM_Flame_Thrower
-MRUItem4=/Game/Levels/L_HD_RDB
-MRUItem5=/Game/Levels/L_LD_RDB
-MRUItem6=/Game/Levels/L_HD_JAB
-MRUItem7=/Game/Assets/Materials/M_CarMasterMetal
-MRUItem8=/Game/Assets/Textures/Cars/car_03/T_Car_03_BlackParts_AORM
-MRUItem9=/Game/Assets/MaterialInstances/car_03/MI_Car_03_BlackParts_Inst
-MRUItem10=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT
-MRUItem11=/Game/Assets/MaterialInstances/car_03/MI_Car_03_Gold_Inst
-MRUItem12=/Game/Assets/MaterialInstances/car_03/MI_Car_03_Silver_Inst
-MRUItem13=/Game/Assets/MaterialInstances/car_03/MI_Car_Lights_Inst
-MRUItem14=/Game/Assets/MaterialInstances/car_03/MI_Car_Lights
-MRUItem15=/Game/Assets/MaterialInstances/car_03/Car3_unwrapped_05
-MRUItem16=/Game/Assets/MaterialInstances/car_01/Car_01
-MRUItem17=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT_Skeleton
-MRUItem18=/Game/Levels/L_BuildingMaterials
-MRUItem19=/Game/Levels/L_HD_YH
+MRUItem0=/Game/Assets/Materials/Effects/M_BasicRock
+MRUItem1=/Game/Assets/Materials/Effects/M_AssetPlatform
+MRUItem2=/Game/Assets/Materials/Effects/M_ToonExplosion
+MRUItem3=/Game/Assets/Materials/Effects/M_Sparks
+MRUItem4=/Game/Assets/Materials/Effects/M_Spark
+MRUItem5=/Game/Assets/Materials/Effects/M_ShockWaveDecals
+MRUItem6=/Game/Assets/Materials/Effects/M_ShockWave
+MRUItem7=/Game/Assets/Materials/Effects/M_MuzzleFlare
+MRUItem8=/Game/Assets/Materials/Effects/M_GunMuzzleFlash
+MRUItem9=/Game/Assets/Materials/Effects/M_FXCloud
+MRUItem10=/Game/Assets/Materials/Effects/m_flare_01
+MRUItem11=/Game/Assets/Materials/Effects/M_Fire_SubUV
+MRUItem12=/Game/Assets/Materials/Effects/M_Fire
+MRUItem13=/Game/Assets/Materials/Effects/M_CheapFXCloud
+MRUItem14=/Game/Assets/Materials/Effects/M_Burst
+MRUItem15=/Game/Levels/L_Effects
+MRUItem16=/Game/Assets/MaterialInstances/Effects/MI_Fire
+MRUItem17=/Game/Assets/FX/Emitters/EM_Flame_Thrower
+MRUItem18=/Game/Levels/L_HD_RDB
+MRUItem19=/Game/Levels/L_LD_RDB
 
 [DetailCategories]
 BP_PipeBuilder_C.Tick=True
@@ -1826,6 +1826,9 @@ PrecomputedVisibilityVolume.TransformCommon=True
 PrecomputedVisibilityVolume.Replication=True
 PrecomputedVisibilityVolume.BrushSettings=True
 PrecomputedVisibilityVolume.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/ART_Blueprints/Asset_BP/BP_PipeBuilder.BP_PipeBuilder=0
@@ -1937,7 +1940,21 @@ PrecomputedVisibilityVolume.Actor=True
 /Game/Assets/Materials/M_CarMasterMetal.M_CarMasterMetal=1
 /Game/Assets/FX/Emitters/EM_Flame_Thrower.EM_Flame_Thrower=1
 /Game/Assets/MaterialInstances/Effects/MI_Fire.MI_Fire=1
-/Game/Assets/Materials/Effects/M_Fire.M_Fire=1
+/Game/Assets/Materials/Effects/M_Fire.M_Fire=0
+/Game/Assets/Materials/Effects/M_Burst.M_Burst=0
+/Game/Assets/Materials/Effects/M_BasicRock.M_BasicRock=0
+/Game/Assets/Materials/Effects/M_AssetPlatform.M_AssetPlatform=0
+/Game/Assets/Materials/Effects/M_ToonExplosion.M_ToonExplosion=0
+/Game/Assets/Materials/Effects/M_Sparks.M_Sparks=0
+/Game/Assets/Materials/Effects/M_Spark.M_Spark=0
+/Game/Assets/Materials/Effects/M_ShockWaveDecals.M_ShockWaveDecals=0
+/Game/Assets/Materials/Effects/M_ShockWave.M_ShockWave=0
+/Game/Assets/Materials/Effects/M_MuzzleFlare.M_MuzzleFlare=0
+/Game/Assets/Materials/Effects/M_GunMuzzleFlash.M_GunMuzzleFlash=0
+/Game/Assets/Materials/Effects/M_FXCloud.M_FXCloud=0
+/Game/Assets/Materials/Effects/m_flare_01.M_Flare_01=0
+/Game/Assets/Materials/Effects/M_Fire_SubUV.M_Fire_SubUV=0
+/Game/Assets/Materials/Effects/M_CheapFXCloud.M_CheapFXCloud=0
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2064,26 +2081,26 @@ DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PrecomputedVisibilityVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Assets/FX/Effect_02.Effect_02;
-RecentlyPlaced=/Game/Assets/FX/Effect_05.Effect_05;
+RecentlyPlaced=/Game/Assets/FX/VFX_06_MustardGas.VFX_06_MustardGas;
+RecentlyPlaced=/Game/Assets/FX/VFX_01_RockExplosion.VFX_01_RockExplosion;
+RecentlyPlaced=/Game/Assets/FX/VFX_02_FlamThrowere.VFX_02_FlamThrowere;
+RecentlyPlaced=/Game/Assets/FX/VFX_04_DrillSparks.VFX_04_DrillSparks;
+RecentlyPlaced=/Game/Assets/FX/VFX_05_RocketSmoke.VFX_05_RocketSmoke;
+RecentlyPlaced=/Game/Assets/FX/VFX_03_MuzzleFlash.VFX_03_MuzzleFlash;
+RecentlyPlaced=/Game/Assets/FX/PS_SimpleMustardCloudSystem.PS_SimpleMustardCloudSystem;
 RecentlyPlaced=/Script/Engine.PrecomputedVisibilityVolume;/Engine/Transient.ActorFactoryBoxVolume_19
 RecentlyPlaced=/Game/Assets/SkeletalMeshes/Cars/SKM_Car_ModelT.SKM_Car_ModelT;
 RecentlyPlaced=/Game/Assets/MaterialInstances/car_03/Car3_unwrapped_05.Car3_unwrapped_05;
 RecentlyPlaced=/Game/Assets/MaterialInstances/car_01/Car_01.Car_01;
 RecentlyPlaced=/Game/Assets/MaterialInstances/car_02/Car_02_Glass_FIX.Car_02_Glass_FIX;
-RecentlyPlaced=/Game/Assets/FX/Effect_03.Effect_03;
 RecentlyPlaced=/Game/Assets/StaticMesh/Wood/SM_Bridge.SM_Bridge;
-RecentlyPlaced=/Game/Assets/FX/Effect_04.Effect_04;
 RecentlyPlaced=/Game/Assets/StaticMesh/SM_Car_Test.SM_Car_TEST;
-RecentlyPlaced=/Game/Assets/FX/Effect_01.Effect_01;
 RecentlyPlaced=/Game/Assets/Materials/M_Basic.M_Basic;
 RecentlyPlaced=/Game/Assets/Materials/M_Basic_RDB.M_Basic_RDB;
 RecentlyPlaced=/Game/Assets/Materials/M_ColorGradient_JAB.M_ColorGradient_JAB;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Assets/StaticMesh/Metal/SM_TankWreck_RDB.SM_TankWreck_RDB;
 RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_Leaf_JAB.SM_Leaf_JAB;
-RecentlyPlaced=/Game/Assets/StaticMesh/Foliage/SM_IvyLeaf_RDB.SM_IvyLeaf_RDB;
-RecentlyPlaced=/Game/Assets/Particles/PS_FallingLeaves_JAB.PS_FallingLeaves_JAB;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -2100,6 +2117,7 @@ OnlyBuildVisibility=False
 /Game/Assets/Materials=(R=0.051269,G=0.527115,B=0.051269,A=1.000000)
 /Game/Assets/MaterialInstances=(R=0.051269,G=0.527115,B=0.051269,A=1.000000)
 /Game/Assets/Textures=(R=0.527115,G=0.051269,B=0.051269,A=1.000000)
+/Game/Assets/DestructibleMesh=(R=0.577580,G=0.215861,B=0.215861,A=1.000000)
 
 [MaterialEditor]
 PrimType=1
